Fixed #1097: [Ag20] Style broken on material and bootstrap classes (Fixed Security risks pages)

--- a/admin/webapp/websrc/app/common/styles/app/common.scss
+++ b/admin/webapp/websrc/app/common/styles/app/common.scss
@@ -1867,3 +1867,12 @@ mat-checkbox {
   max-width: calc(100vw - 600px);
   white-space: nowrap;
 }
+
+#compliance-profile {
+  .mat-mdc-tab-body-wrapper {
+    height: 100%;
+    .mat-mdc-tab-body {
+      height: 100%;
+    }
+  }
+}
